[package]
name = "near-smart-contract"
version = "0.1.0"
authors = ["Dmitry Goyda <gettfaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell 'rustc' to optimize for small code size.
opt-level ="z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"

[dev-dependencies]
near-sdk-sim = "3.1.0"